hphp/hack/test/typecheck/legacy_initializer.php.exp
ERROR: File "legacy_initializer.php", line 22, characters 7-29:
Please add a type hint `const SomeType gconstWithoutHintNested` (Naming[2001])
ERROR: File "legacy_initializer.php", line 22, characters 7-29:
Please add a type hint (Naming[2035])
